force-app/main/default/objects/Propulsion_Part__c/Propulsion_Part__c.object-meta.xml
<CustomObject>
    <label>Propulsion Part</label>
    <nameField>
        <label>Propulsion Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propulsion Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>