force-app/main/default/objects/Propulsion_Part__c/fields/End_of_Warranty__c.field-meta.xml
<CustomField>
    <fullName>End_of_Warranty__c</fullName>
    <label>End of Warranty</label>
    <type>Date</type>
</CustomField>