force-app/main/default/objects/Propulsion_Part__c/fields/Propulsion__c.field-meta.xml
<CustomField>
    <fullName>Propulsion__c</fullName>
    <label>Propulsion</label>
    <referenceTo>Propulsion__c</referenceTo>
    <relationshipLabel>Propulsion Parts</relationshipLabel>
    <relationshipName>Propulsion_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>