force-app/main/default/objects/Propulsion_Part__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT SENT</fullName>
                <default>true</default>
                <label>NOT SENT</label>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>ARRIVED</fullName>
            </value>
            <value>
                <fullName>ACCEPTED/WARRANTY</fullName>
            </value>
            <value>
                <fullName>END OF WARRANTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>