force-app/main/default/objects/Propulsion_Part__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>