force-app/main/default/objects/Propulsion_Part__c/fields/Unit_of_measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_measurement__c</fullName>
    <label>Unit of measurement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>